9.1 fix calendar, upload img, autosize and content overflow

--- a/src/style/blocks/form.scss
+++ b/src/style/blocks/form.scss
@@ -131,6 +131,12 @@
 
 .form__avatar {
   margin-right: 10px;
+
+  img {
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+  }
 }
 
 .form__submit-btn {
